# sparkmonad

./: pyproject.toml
src/SparkMonad/: monad.py  step.py  table_description.py
test/: test_table_description.py
